--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-144.png" />
   <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png" />
-
+  <link rel="shortcut icon" href="https://s3.amazonaws.com/theuptrade/images/favicon.ico">
   <meta name="robots" content="noarchive,noodp,noydir" />
   <meta name="referrer" content="always" />
 
