--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><img src= "https://s3.amazonaws.com/theuptrade/images/UT_logo.gif"> </a>
+      <a class="navbar-brand" href="/"><img src="https://s3.amazonaws.com/theuptrade/images/UP.svg", style="width: 200px; margin-top: -18px;"></a>
     </div>
 <!-- below is ruby code to tell us when / when not to render nav links -->
 
