--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,57 +1,76 @@
-<div class="box wide">
-  <div class="legend">
-    Create an Account
+<div class="container">
+  <div class="col-md-12 border">
+    <h2>Create an Account</h2>
   </div>
 
+  <div class="col-md-12">
   <%= form_for @user, url: registrations_path do |f| %>
   <%= f.hidden_field :invitation_code %>
-
+<br>
     <p>
     To create a new account, enter your e-mail address and a password.
     Your e-mail address will never be shown to users and will only be used
     if you need to reset your password, or to receive optional new-message
     alerts.  Your username can be changed later.
     </p>
-  
+  <br>
 
     <p>
-    <%= f.label :username, "Username:", :class => "required" %>
-    <%= f.text_field :username, :size => 30 %>
+      <div class="container">
+    <div class="col-md-1"><%= f.label :username, "Username:", :class => "required" %></div>
+    <div class="col-md-4"><%= f.text_field :username, :size => 30, :class => "form-control" %></div>
     <span class="hint">
       <tt><%= User.username_regex %></tt>
     </span>
+  </div>
     <br />
-
-    <%= f.label :email, "E-mail Address:", :class => "required" %>
-    <%= f.email_field :email, :size => 30 %>
+    <div class="container">
+    <div class="col-md-1"><%= f.label :email, "E-mail Address:", :class => "required" %></div>
+    <div class="col-md-4"><%= f.email_field :email, :size => 30, :class => "form-control" %></div>
     <span class="hint">
       <a href="http://www.gravatar.com/" target="_blank">Gravatar</a>'ized
     </span>
-    <br />
+ 
+  </div>
+<br />
 
-    <%= f.label :password, "Password:", :class => "required" %>
-    <%= f.password_field :password, :size => 30, :autocomplete => "off" %>
-    <br />
-
-    <%= f.label :password_confirmation, "Password (again):",
-      :class => "required" %>
-    <%= f.password_field :password_confirmation, :size => 30,
-      :autocomplete => "off" %>
+  <div class="container">
+    <div class="col-md-1"><%= f.label :password, "Password:", :class => "required" %></div>
+    <div class="col-md-4"><%= f.password_field :password, :size => 30, :autocomplete => "off", :class => "form-control" %></div>
+    
+   </div> 
+<br />
+   <div class="container">
+    <div class="col-md-1"><%= f.label :password_confirmation, "Password (again):",
+      :class => "required" %></div>
+    <div class="col-md-4"><%= f.password_field :password_confirmation, :size => 30,
+      :autocomplete => "off", :class => "form-control" %></div>
     <br />
     </p>
+  </div>
+<br />
 
+  <div class="container">
+    <div class="col-md-5">
     <p>
     Want to tell us about yourself?  It's optional, but it will be visible in
     your public profile and can be changed at any time.
     </p>
+  </div>
+</div>
 
-    <p>
-    <div class="boxline">
+
+<div class="container">
+    <div class="col-md-1">
       <%= f.label :about, "About:", :class => "required" %>
-      <%= f.text_area :about, :size => "100x5", :style => "width: 600px;" %>
     </div>
+    <div class="col-md-4">  
+      <%= f.text_area :about, :size => "100x5", :style => "width: 600px;", :class => "form-control" %>
+    </div>
+  </div>
+</div>
 
-    <div class="box">
+    <!-- <div class="box">
       <div class="boxline markdown_help_toggler"
         style="margin-left: 9em; width: 600px;">
         <div class="markdown_help_label">
@@ -59,13 +78,18 @@
         </div>
 
         <div style="clear: both;"></div>
-
+ -->
         <%= render :partial => "global/markdownhelp" %>
       </div>
     </div>
+</div>
+<br><br>
+    <div class="container">
+      <div class="col-md-2">
 
-    <p>
-    <%= f.submit "Signup" %>
-    </p>
+    <%= f.submit "Signup", :class => "btn-default", :style => "margin-left: 50px;" %>
+  </div>
+    </div>
+    <br><br>
   <% end %>
 </div>
