--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -11,9 +11,21 @@
     To create a new account, enter your e-mail address and a password.
     Your e-mail address will never be shown to users and will only be used
     if you need to reset your password, or to receive optional new-message
-    alerts.  Your username can be changed later.
+    alerts.  Your username can be changed later. 
     </p>
   <br>
+
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2>We could not register you, please check your <%= pluralize(@user.errors.count, "error") %>.</h2>
+
+      <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
     <p>
       <div class="container">
