--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -77,22 +77,8 @@
 <div class= "col-md-9">
   <%= f.label :tags_a, "Tags:", :class => "required",
     :style => "line-height: 2.3em;" %>
+  <%= f.text_field :new_tags %>
   
-  <%= f.select "tags_a", options_for_select(
-
-    Tag.all_with_filtered_counts_for(@user).map{|t|
-      
-      html = "<strong>#{h(t.tag)}</strong> - #{h(t.description.to_s)}"
-      if t.hotness_mod != 0
-        html << " (hotness mod #{t.hotness_mod > 0 ? "+" : ""}#{t.hotness_mod})"
-      end
-      if t.filtered_count > 0
-        html << " <em>#{t.filtered_count} user" <<
-          (t.filtered_count == 1 ? "" : "s") << " filtering</em>"
-      end
-      [ "#{t.tag} - #{t.description}", t.tag, { "data-html" => raw(html) } ]},
-    f.object.tags_a), {}, { :multiple => true } %>
-  </div>
 </div>
 <!--
   <div class="boxline markdown_help_toggler">
