--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container overall signup">
 
 
-  The UpTrade is currently in beta. To become a member and access additional functionaly of the website, please signup for a beta membership here, or request an invite from an exisitng user. 
+  The UpTrade is currently in beta. If you are an existing member, you can login below. If you would like to become a member to vote, comment, and submit stories please request an invite (also below). 
   </div>
 
 <div class="container overall">
     <h4>Login</h4>
-
+<br>
   <%= form_tag login_url do %>
 
  
