--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -8,6 +8,14 @@ body{
   font-family: MuseoSans,serif;
 }
 
+.buzz {
+  padding: 2px;
+  padding-left: 100px;
+  font-size: 36px;
+  font-weight: 600;
+  color: #979797;
+}
+
 .number {
   font-size: xxx-large;
   margin-left: -20px;
@@ -178,12 +186,10 @@ h6 {
   margin-bottom: 5px;
 }
 
- .border {
-  border-bottom-color: #d2d5d4;
-  border-bottom-width: 1px;
-  border-bottom-style: inset;
-  margin-top: -10px;
-  margin-bottom: 0px;
+.border {
+    border-bottom: 1px solid #d2d5d4;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .byline{
