added outbound link tracking on anything that includes impressions

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2323,6 +2323,14 @@ label {
   margin-bottom: 5px;
   font-weight: 200;
 }
+formlabel {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 14px
+}
 input[type="search"] {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
