--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,14 +1,15 @@
-<div class="box wide">
-  <div class="legend">
-    Requested Invitations
-  </div>
+<div class="container">
+  <div class="col-md-8">
+    <h4>Requested Invitations</h4>
+
 
   <p>
   These persons have requested invitations and confirmed their e-mail
   addresses.  If you recognize anyone, feel free to send them an invitation and
   remove their request.  Spam will be cleared out by a moderator.
   </p>
-
+  </div>
+  <div class="col-md-8">
   <table class="data" width="100%" cellspacing=0>
   <tr>
     <th width="15%">Date/Time</th>
@@ -51,4 +52,5 @@
     </tr>
   <% end %>
   </table>
+</div>
 </div>
