--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -65,7 +65,7 @@
   <div class="container">
     <div class="col-md-5">
     <p>
-    Want to tell us about yourself?  It's optional, but it will be visible in
+    Tell us about yourself?  It will be visible in
     your public profile and can be changed at any time.
     </p>
   </div>
