--- a/app/views/signup/invited.html.erb
+++ b/app/views/signup/invited.html.erb
@@ -1,6 +1,6 @@
-<div class="box wide">
-  <div class="legend">
-    Create an Account
+<div class="container">
+  <div class="col-md-12 border">
+    <h4>Create an Account</h4>
   </div>
 
   <%= form_for @new_user, { :url => signup_url,
@@ -8,6 +8,8 @@
     <%= hidden_field_tag "invitation_code", @invitation.code %>
 
 
+<div class="col-md-12">
+  <br>
 
     <p>
     To create a new account, enter your e-mail address and a password.
@@ -19,65 +21,58 @@
     <%= error_messages_for(@new_user) %>
 
     <p>
-    <%= f.label :invitation, "Invited By:", :class => "required" %>
+    <%= f.label :invitation, "Invited by:", :class => "required" %>
     <span class="d">
       <a href="/u/<%= @invitation.user.username %>" target="_blank"><%=
         @invitation.user.username %></a>
     </span>
     </p>
-
+</div>
+<div class="col-md-7">
     <p>
     <%= f.label :username, "Username:", :class => "required" %>
-    <%= f.text_field :username, :size => 30 %>
+    <%= f.text_field :username, :size => 30, :class => "form-control" %>
     <span class="hint">
       <tt><%= User.username_regex %></tt>
     </span>
     <br />
 
     <%= f.label :email, "E-mail Address:", :class => "required" %>
-    <%= f.email_field :email, :size => 30 %>
+    <%= f.email_field :email, :size => 30, :class => "form-control" %>
     <span class="hint">
       <a href="http://www.gravatar.com/" target="_blank">Gravatar</a>'ized
     </span>
     <br />
 
     <%= f.label :password, "Password:", :class => "required" %>
-    <%= f.password_field :password, :size => 30, :autocomplete => "off" %>
+    <%= f.password_field :password, :size => 30, :autocomplete => "off", :class => "form-control" %>
     <br />
 
     <%= f.label :password_confirmation, "Password (again):",
       :class => "required" %>
     <%= f.password_field :password_confirmation, :size => 30,
-      :autocomplete => "off" %>
+      :autocomplete => "off", :class => "form-control" %>
     <br />
     </p>
-
+  </div>
+ <div class="col-md-7">
     <p>
-    Want to tell us about yourself?  It's optional, but it will be visible in
+    Tell us about yourself?  It will be visible in
     your public profile and can be changed at any time.
     </p>
 
     <p>
-    <div class="boxline">
+   
       <%= f.label :about, "About:", :class => "required" %>
-      <%= f.text_area :about, :size => "100x5", :style => "width: 600px;" %>
-    </div>
+      <%= f.text_area :about, :size => "100x5", :style => "width: 600px;", :class => "form-control" %>
+    
 
-    <div class="box">
-      <div class="boxline markdown_help_toggler"
-        style="margin-left: 9em; width: 600px;">
-        <div class="markdown_help_label">
-          Markdown formatting available
-        </div>
-
-        <div style="clear: both;"></div>
-
-        <%= render :partial => "global/markdownhelp" %>
-      </div>
-    </div>
+   
 
     <p>
-    <%= submit_tag "Signup" %>
+    <%= submit_tag "Signup", :class => "btn btn-default" %>
     </p>
   <% end %>
+  </div>
+</div>
 </div>
