--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -8,6 +8,15 @@ body{
   font-family: MuseoSans,serif;
 }
 
+.formlabel {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 14px
+}
+
 .buzz {
   padding: 2px;
   padding-left: 100px;
