--- a/app/views/stories/_listdetail.html.erb
+++ b/app/views/stories/_listdetail.html.erb
@@ -23,9 +23,7 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
   
     <div class="col-md-5 col-lg-7 col-xs-9 trade">
       <h4>
-
-        <%= link_to story.title, controller: "outbound_impressions", action: "create", method: :post, :story_id => story.id %>
-        
+        <%= link_to story.title, outbound_impressions_url(trackable_id: story.id, trackable_type: "Story"), method: :post %>
       </h4>
 
       
@@ -100,7 +98,7 @@ class="story <%= story.vote == 1 ? "upvoted" : "" %> <%= story.vote == -1 ?
     </div>
     </div>
           <div class="col-xs-1 buzz">
-  <%= story.buzz_rating %>
+  <%= story.buzz %>
 </div>
   <div class="col-xs-1 pull-right">
     <h5>
