--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -1,4 +1,8 @@
 /* Company Colours */ 
+$darkgrey='#7f8c8d'
+$sitegreen='#27ae60'
+$backgroundgrey='ecf0f1'
+$textgrey='000000'
 
 body{
   font-family: MuseoSans,serif;
