--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -1,8 +1,3 @@
-/* Company Colours */ 
-$darkgrey='#7f8c8d'
-$sitegreen='#27ae60'
-$backgroundgrey='ecf0f1'
-$textgrey='000000'
 
 body{
   font-family: MuseoSans,serif;
@@ -181,7 +176,7 @@ a:focus {
 }
 
 body{
-  background-color: $backgroundgrey;
+  background-color: #ecf0f1;
 }
 
 h4 {
