--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -1,6 +1,6 @@
 /* Company Colours */ 
-$darkgrey='#7f8c8d'
-$sitegreen='#27ae60'
+$darkgrey='7f8c8d'
+$sitegreen='27ae60'
 $backgroundgrey='ecf0f1'
 $textgrey='000000'
 
