--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -5,7 +5,13 @@
 //= require select2
 
 
+
+
 "use strict";
+
+$(function ()
+{ $("#example").popover();
+});
 
 var _Lobsters = Class.extend({
   curUser: null,
