--- a/app/assets/stylesheets/listdetail.css
+++ b/app/assets/stylesheets/listdetail.css
@@ -9,10 +9,15 @@
   font-size: 14px
 }
 
+.score {
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .buzz {
   padding: 2px;
   padding-left: 100px;
-  font-size: 36px;
+  font-size: 24px;
   font-weight: 600;
   color: #979797;
 }
