--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -75,11 +75,11 @@
             <h3>Showing Stories Tagged with<a href="<%= @cur_url %>" > <%= @heading %> </a></h3>
           </div>
         <% end %>
-<!--
-    <div id="inside">
+
+ <div class="container">
       <% if flash[:error] %>
-        <div class="flash-error"><%= flash[:error] %></div>
+        <div class="flash-error col-md-6"><%= flash[:error] %></div>
       <% elsif flash[:success] %>
-        <div class="flash-success"><%= flash[:success] %></div>
+        <div class="flash-success col-md-6"><%= flash[:success] %></div>
       <% end %>
--->
+    </div>
