--- a/app/views/invitation_requests/_form.html.erb
+++ b/app/views/invitation_requests/_form.html.erb
@@ -18,7 +18,7 @@
     <%= f.text_field :memo, :size => 30, :class => "form-control" %>
     <br />
 
-    <%= f.submit "Request Invitation" %>
+    <%= f.submit "Request Invitation", :class => "btn btn-default" %>
     </p>
   <% end %>
 
