--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container overall signup">
 
 
-  The UpTrade is currently in beta. If you are an existing member, you can login below. If you would like to become a member to vote, comment, and submit stories please request an invite (also below). 
+  The UpTrade is currently in beta. If you are an existing member, you can login below. If you would like to become a member to vote, comment, and submit stories please request an invite. 
   </div>
 <div class="container">
 <div class="col-md-6">
