--- a/app/views/invitations/_build.html.erb
+++ b/app/views/invitations/_build.html.erb
@@ -35,7 +35,7 @@
     </p>
 
     <p>
-    <%= submit_tag "Request Invitation" %>
+    <%= submit_tag "Request Invitation", :class => "btn btn-default" %>
     </p>
   <% end %>
 </div>
