--- a/app/views/invitations/build.html.erb
+++ b/app/views/invitations/build.html.erb
@@ -36,7 +36,7 @@
     </p>
 
     <p>
-    <%= submit_tag "Request Invitation" %>
+    <%= submit_tag "Request Invitation", :class => "btn btn-default"%>
     </p>
   <% end %>
 </div>
