--- a/app/views/invitation_request_mailer/invitation_request.text.erb
+++ b/app/views/invitation_request_mailer/invitation_request.text.erb
@@ -1,15 +1,20 @@
-Hello <%= @invitation_request.email %>,
+Hello!
 
-Someone at <%= @invitation_request.ip_address %> has submitted an invitation request to
-<%= Rails.application.name %>.
+Thanks for requesting an invite for The UpTrade. Please check below that 
+your information is correct. 
 
   Name: <%= @invitation_request.name %>
-  E-mail: <%= @invitation_request.email %> (won't be displayed to other users)
+  E-mail: <%= @invitation_request.email %> 
   Memo: <%= @invitation_request.memo %>
 
-If this is you, visit the URL below to confirm your request and
-display it to other logged-in users.
+If this is you, visit the URL below to confirm your request, we'll be sending 
+you an email shortly. 
 
   <%= root_url %>invitations/confirm/<%= @invitation_request.code %>
 
-If this is not you, you can delete this message.
+If you have any questions, don't hesitate to reach out!
+
+Thanks,
+Chris 
+
+chris@theuptrade.com
