--- a/app/views/login/forgot_password.html.erb
+++ b/app/views/login/forgot_password.html.erb
@@ -1,7 +1,8 @@
-<div class="box wide">
-  <div class="legend">
-    Reset Password
-  </div>
+<div class="container">
+
+  <div class="col-md-6">
+    <h4>Reset Password</h4>
+  
 
   <p>
   If you've forgotten your password, enter your e-mail address or username
@@ -10,11 +11,12 @@
 
   <%= form_tag reset_password_url do %>
     <%= label_tag :email, "E-mail or Username:" %>
-    <%= text_field_tag :email, "", :size => 30 %>
+    <%= text_field_tag :email, "", :size => 30, :class => "form-control" %>
     <br />
 
     <p>
-    <%= submit_tag "Reset Password" %>
+    <%= submit_tag "Reset Password", :class => "btn btn-default" %>
     </p>
   <% end %>
+  </div>
 </div>
