--- a/app/views/invitation_mailer/invitation.text.erb
+++ b/app/views/invitation_mailer/invitation.text.erb
@@ -1,9 +1,9 @@
-Hello <%= @invitation.email %>,
+Hello <%= @invitation.name %>,
 
-The user <%= @invitation.user.username %> has invited you to <%= Rails.application.name %> (<%= root_url %>)
-
-<%= @invitation.memo.present? ? raw("   #{@invitation.memo}") : "" %>
+<%= @invitation.name %> has invited you to The UpTrade!
 
 To accept this invitation and create an account, visit the URL below:
 
 <%= root_url %>invitations/<%= @invitation.code %>
+
+Enjoy
