--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -217,9 +217,15 @@
 -->
     <div class="form-group">
       <div class="col-sm-9">
-      <%= f.submit "Save All Settings", :class => "btn btn-default pull-right" %>
+      <%= f.submit "Save All Settings", :class => "btn btn-default pull-left", :style => "width: 100%;" %>
       <% end %>
     </div>
+    <br>
+    <br>
+        <br>
+    <br>
+        <br>
+    <br>
    </div>
 
     <h4 style="
