--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -38,7 +38,7 @@
       <% if @user.is_moderator? %>
         <td><%= form_tag delete_invitation_request_url do %>
           <%= hidden_field_tag "code", ir.code %>
-          <%= submit_tag "Delete", :data => { :confirm => "Are you sure " <<
+          <%= submit_tag "Delete", :class => "btn btn-default", :data => { :confirm => "Are you sure " <<
             "you want to delete this request?" } %>
         <% end %></td>
       <% end %>
