fixed comment box

--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -75,7 +75,7 @@
 
 <div class="row">
 <div class= "col-md-9">
-  <%= f.label :tags_a, "Tags:", :class => "required",
+  <%= f.label :tags_a, "Tags (case sensitive, we're fixing this):", :class => "required",
     :style => "line-height: 2.3em;" %>
   <%= f.text_field :new_tags, :class => "form-control", :placeholder => 'Separate tags with commas, for example: "AAPL, US EQUITY"' %>
 </div>
